# screenio

./: .gitignore  Jenkinsfile  README.rst  setup.cfg  setup.py
screenio/: __init__.py  __main__.py  cli.py  convert.py  funcs.py  octopus.py  record.py  triggers.py  utils.py
tests/: test_dummy.py
