[metadata]
name = screenio
description = A tool to create and execute a "special setup"/"data file".
url = https://github.com/axju/screenio
author = axju
author_email = moin@axju.de
license = MIT
long_description = file: README.rst
long_description_content_type = text/plain
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[tox:tox]
envlist = py36, py37, py38, py39, flake8, pylint
skip_missing_interpreters = True

[testenv]
deps = coverage
       cryptography
commands = coverage run --source screenio -m unittest -v
           coverage report

[testenv:flake8]
deps = flake8
commands = flake8 screenio

[testenv:pylint]
deps = pylint
commands = pylint --rcfile=setup.cfg screenio

[flake8]
ignore = E701, E722
max-line-length = 180
exclude = *migrations*, *tests.py

[pylint]
disable =
  missing-docstring,
  dangerous-default-value,
  invalid-name, no-member,
  too-many-arguments,
  broad-except
max-line-length = 180
ignore = migrations, tests
